samples/_failures_safe/1761348184_eb8ac8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_322007cb.c: In function ‘main’:
./samples/SAFE/__tmp_322007cb.c:172:13: error: expected ‘;’ at end of input
  172 |     tokenize
      |             ^
      |             ;
./samples/SAFE/__tmp_322007cb.c:172:5: error: expected declaration or statement at end of input
  172 |     tokenize
      |     ^~~~~~~~
